[gd_scene load_steps=14 format=2]

[ext_resource path="res://Themes/alterebro-pixel-font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/General Use/Pause.gd" type="Script" id=2]
[ext_resource path="res://Themes/pressed_button.tres" type="StyleBox" id=3]
[ext_resource path="res://Themes/selected_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Themes/non_selected_button.tres" type="StyleBox" id=5]
[ext_resource path="res://Themes/hovered_button.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]
size = 125
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 125
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="PauseHud" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PauseHud"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="PauseHud/VBoxContainer"]
margin_top = 39.0
margin_right = 880.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Game Paused!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseHud/VBoxContainer"]
margin_top = 185.0
margin_right = 880.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="PauseHud/VBoxContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ResumeButton" type="Button" parent="PauseHud/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 830.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../../MarginContainer3/ExitButton")
focus_neighbour_bottom = NodePath("../../MarginContainer2/ControlsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="PauseHud/VBoxContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 880.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ControlsButton" type="Button" parent="PauseHud/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 830.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../../MarginContainer/ResumeButton")
focus_neighbour_bottom = NodePath("../../MarginContainer3/ExitButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Controls"

[node name="MarginContainer3" type="MarginContainer" parent="PauseHud/VBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 880.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ExitButton" type="Button" parent="PauseHud/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 830.0
margin_bottom = 65.0
focus_neighbour_top = NodePath("../../MarginContainer2/ControlsButton")
focus_neighbour_bottom = NodePath("../../MarginContainer/ResumeButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Exit to Menu"

[node name="ControlsHud" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 100
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsHud"]
margin_left = 200.0
margin_top = 100.0
margin_right = 1080.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="ControlsHud/VBoxContainer"]
margin_right = 880.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 6 )
text = "Controls"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ControlsHud/VBoxContainer"]
margin_top = 116.0
margin_right = 880.0
margin_bottom = 185.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 7 )
text = "Singleplayer: Survive the furthest you can without being hit five times.
Multiplayer: The first player to achieve five points wins!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsHud/VBoxContainer"]
margin_top = 200.0
margin_right = 880.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsHud/VBoxContainer/VBoxContainer"]
margin_right = 880.0
margin_bottom = 135.0

[node name="MarginContainer" type="MarginContainer" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 438.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 388.0
margin_bottom = 135.0

[node name="Player_one" type="Label" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 338.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 8 )
text = "Player 1:"
align = 1
valign = 1

[node name="Player_two" type="Label" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 338.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 9 )
text = "Move Foward: W
Move Back: S"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_right = 880.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 388.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 338.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 8 )
text = "Player 2:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ControlsHud/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 66.0
margin_right = 338.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 9 )
text = "Move Foward: Up Arrow
Move Back: Down Arrow"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="ControlsHud/VBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 880.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ReturnButton" type="Button" parent="ControlsHud/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 830.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 5 )
text = "Return"

[connection signal="pressed" from="PauseHud/VBoxContainer/VBoxContainer/MarginContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseHud/VBoxContainer/VBoxContainer/MarginContainer2/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="PauseHud/VBoxContainer/VBoxContainer/MarginContainer3/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ControlsHud/VBoxContainer/VBoxContainer/MarginContainer3/ReturnButton" to="." method="_on_ReturnButton_pressed"]
